# 4844

./: .env.example  .gitignore  README.md
btx/: go.mod  main.go  utils.go
files/: blob  commitment  hash  proof  x  y
poe/: Cargo.toml
poe/src/: blob_domain.rs  blob_polynomial.rs  bls12_381_scalar_field.rs  fiat_shamir.rs  file_utils.rs  lib.rs  main.rs
verifier/: hardhat.config.js  hardhat.config.ts  main.js  package-lock.json  package.json
verifier/contracts/: Verifier.sol
verifier/ignition/deployments/chain-11155111/: deployed_addresses.json  journal.jsonl
verifier/ignition/modules/: Verify.js
verifier/scripts/: deploy.ts
verifier/test/: Verifier.js
