cargo-features = ["edition2024"]

[package]
name = "poe"
description = "zkLighter Perps Circuits"
version = "0.0.1"
readme = "README.md"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/elliottech/zklighter-perps-circuits-plonky"
repository = "https://github.com/elliottech/zklighter-perps-circuits-plonky"
keywords = ["zkLighter"]
categories = ["zkLighter"]

[dependencies]
# circuit = { git = "https://github.com/elliottech/zklighter-perps-circuits-plonky.git" }
circuit = { path = "../../zklighter-perps-circuits-plonky/circuit" }
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2.git", rev = "f5a5845bc8572a73dfcf7ee7fb2d76a16d426baa" }
hex = "0.4"
itertools = "0.13"
num = "0.4"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
env_logger = "0.11.5"
bls12_381 = { version = "0.8.0", package = "sp1_bls12_381", default-features = false, features = [
    "groups",
    "pairings",
    "alloc",
] }
lazy_static = "1.4"
log = { version = "0.4.14", default-features = false }
